@@ -15,3 +15,4 @@
 ^appveyor.yml$
 ^revdep/
 ^configure.log$
+^\.github$
